--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         
         <title>bdero</title>
         
+        <link type="text/css" rel="stylesheet" href="css/reset.css">
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/media-queries.css">
     </head>
