Radial gradient, and a fancy title

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <link type="text/css" rel="stylesheet" href="css/media-queries.css">
     </head>
     <body>
-        <header id="pageheader">
-            <h1>bdero</h1>
-            <p>Python &amp; JavaScript Developer</p>
+        <header>
+            <section>
+                <h1>bdero</h1>
+                <p>Python &amp; JavaScript Developer</p>
+            </section>
         </header>
         
         <nav>
