--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
         
         <div class="comingsoon">
-            <h2>Check back later.</h2>
+            <p>Check back later.</p>
         </div>
         
         <div class="category" id="web">
